--- a/css/style2.css
+++ b/css/style2.css
@@ -38,19 +38,24 @@ body {
   width: 780px;
   height: 400px;
 }
+#myopening {
+  position: relative;
+  width: 960px;
+  height: 560px;
+}
 #mycanvas {
   position: relative;
   width: 633.79px;
   height: 52.77px;
 }
 .mytitle{
-  stroke-dasharray: 500;
-  stroke-dashoffset: 500;
+  stroke-dasharray: 2000;
+  stroke-dashoffset: 2000;
   fill-opacity: 0;
-  animation: draw 5s linear forwards, fillit 3s linear 4s forwards;
-  -webkit-animation: draw 8s linear forwards, fillit 3s linear 4s forwards;
-  -moz-animation: draw 8s linear forwards, fillit 3s linear 4s forwards;
-  -o-animation: draw 8s linear forwards, fillit 3s linear 4s forwards;
+  animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -webkit-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -moz-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -o-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
   font-weight: bold;
 }
 @keyframes draw {
@@ -77,22 +82,26 @@ body {
 @keyframes fillit {
   to {
     fill-opacity: 1;
+    stroke: rgba(255,255,255,0);
   }
 }
 @-webkit-keyframes fillit {
   to {
     fill-opacity: 1;
+    stroke: rgba(255,255,255,0);
   }
 }
 
 @-moz-keyframes fillit {
   to {
     fill-opacity: 1;
+    stroke: rgba(255,255,255,0);
   }
 }
 @-o-keyframes fillit {
   to {
     fill-opacity: 1;
+    stroke: rgba(255,255,255,0);
   }
 }
 
