--- a/css/style2.css
+++ b/css/style2.css
@@ -48,9 +48,29 @@ body {
   width: 633.79px;
   height: 52.77px;
 }
+.rectstuff{
+  stroke-dasharray: 750;
+  stroke-dashoffset: 750;
+  fill-opacity: 0;
+  animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -webkit-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -moz-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -o-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  font-weight: bold;
+}
+.smokestuff{
+  stroke-dasharray: 400;
+  stroke-dashoffset: 400;
+  fill-opacity: 0;
+  animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -webkit-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -moz-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  -o-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
+  font-weight: bold;
+}
 .mytitle{
-  stroke-dasharray: 2000;
-  stroke-dashoffset: 2000;
+  stroke-dasharray: 1800;
+  stroke-dashoffset: 1800;
   fill-opacity: 0;
   animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
   -webkit-animation: draw 15s linear forwards, fillit 3s linear 12s forwards;
