--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -170,7 +170,7 @@ header {
 
 
 
-#scene2 {
+#scene2{
   height: 100%;
   overflow: hidden;
   position: absolute;
@@ -183,7 +183,7 @@ header {
   width: 100%;
   background: #A7AF80;
 }
-#scene2 h3 {
+#scene2 h3{
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -191,45 +191,172 @@ header {
   width: 50%;*/
   -webkit-transform: translateY(-50%);
 }
-#scene2 #forest_scene2{
+#scene2 h3#onceupon5,#scene2 h3#onceupon6 {
   opacity: 0;
-  width: 200%;
-  left: -50%;
-  top: -10%;
+  position: absolute;
+  top: 25%;
+/*  left: 50%;
+  width: 50%;*/
+  -webkit-transform: translateY(-25%);
+}
+#scene2 #forestscene2{
+  width: 175%;
+  left: -25%;
+  top: 0;
+  position: absolute;
+
+  opacity: 0;
+
+/*  width: 100%;
+  top:0;
+  opacity: 1;*/
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
   transform: translateX(100%);
 }
 #scene2 #hansel_walking{
+  position: absolute;
   opacity: 0;
-  width: 10%;
-  left: 0;
-  top: 0;
-  -webkit-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  transform: translateX(100%);
+  width: 11.5%;
+  left: 50%;
+  top: 48%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
 
-  -webkit-transform: translateY(50%);
+/*  -webkit-transform: translateY(50%);
   -ms-transform: translateY(50%);
-  transform: translateY(50%);
+  transform: translateY(50%);*/
 }
 #scene2 #gretel_walking{
+  position: absolute;
   opacity: 0;
+  width: 10%;
+  left: 30%;
+  top: 48%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+
+/*  -webkit-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  transform: translateY(50%);*/
 }
 #scene2 #breadcrumbs{
   opacity: 0;
+  position: absolute;
+  width: 7%;
+  left: 0%;
+  top: 45%;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 #scene2 #sun{
+  position: absolute;
   opacity: 0;
+  width: 10%;
+  left: 0%;
+  top: 0%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
 }
 #scene2 #moon{
+  position: absolute;
   opacity: 0;
+  width: 8%;
+  left: 1%;
+  top: 0%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
 }
 
 
 
-
-
+#scene3 {
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  width: 100%;
+  background: #A7AF80;
+}
+#scene3 h3 {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+/*  left: 50%;
+  width: 50%;*/
+  -webkit-transform: translateY(-50%);
+}
+#scene3 #forest_left{
+  width: 250%;
+  top: 10%;
+  left:-225%;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+#scene3 #forest_right{
+  width: 250%;
+  top: 10%;
+  left:75%;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+}
+#scene3 #forest_bottom{
+  width: 200%;
+  left: -50%;
+  top: 50%;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+}
+#scene3 #hansel_head{
+  position: absolute;
+  opacity: 0;
+  width: 20%;
+  top: 60%;
+  left: 60%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+}
+#scene3 #gretel_head{
+  position: absolute;
+  opacity: 0;
+  width: 20%;
+  top: 60%;
+  left: 20%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+}
+#scene3 #house{
+  position: absolute;
+  opacity: 0;
+  width: 20%;
+  top: 50%;
+  left: 40%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+}
+/*
 #second-wipe {
   height: 100%;
   overflow: hidden;
@@ -242,7 +369,6 @@ header {
   width: 100%;
   background: red;
 }
-
 #slide {
   height: 100%;
   position: absolute;
@@ -267,7 +393,7 @@ header {
   width: 100%;
   background: tan;
 }
-
+*/
 #unpin {
   height: 100%;
   position: absolute;
