--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -356,6 +356,77 @@ header {
   -ms-transform: translateY(100%);
   transform: translateY(100%);
 }
+
+
+
+#scene4 {
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  width: 100%;
+  background: #A7AF80;
+}
+#scene4 h3 {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+/*  left: 50%;
+  width: 50%;*/
+  -webkit-transform: translateY(-50%);
+}
+#scene4 #forest_back{
+  opacity: 0;
+  position: absolute;
+  width: 130%;
+  top:0;
+  left:-50%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+#scene4 #blackhouse{
+  opacity: 0;
+  position: absolute;
+  width: 60%;
+  top: 0%;
+  left: 60%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+#scene4 #hansel_candy{
+  opacity: 0;
+  position: absolute;
+  width: 10.5%;
+  top: 50.5%;
+  left: 20%;
+}
+#scene4 #gretel_candy{
+  opacity: 0;
+  position: absolute;
+  width: 13%;
+  top: 50.5%;
+}
+#scene4 #witch_intro{
+  opacity: 0;
+  position: absolute;
+  width: 22%;
+  top: 40%;
+  left: 52%;
+}
+#scene4 #peppermint{
+  opacity: 0;
+  position: absolute;
+  width: 10%;
+  top: 12%;
+  left: 85%;
+}
 /*
 #second-wipe {
   height: 100%;
