--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -81,13 +81,11 @@ header {
 #pin h3 {
   margin: -40px 0 0 0;
   
-/*  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-*/
+  font-size: 3em;
+  line-height: 2;
 
-  font-size: 80px;
-  line-height: 80px;
+/*  font-size: 80px;
+  line-height: 80px;*/
   text-align: center;
   color: #EFEFEF;
 }
@@ -191,14 +189,23 @@ header {
   width: 50%;*/
   -webkit-transform: translateY(-50%);
 }
-#scene2 h3#onceupon5,#scene2 h3#onceupon6 {
+#scene2 h3#onceupon5,#scene2 h3#onceupon6{
   opacity: 0;
   position: absolute;
-  top: 25%;
+  top: 10%;
+  left: 15%;
 /*  left: 50%;
   width: 50%;*/
   -webkit-transform: translateY(-25%);
 }
+/*#scene2 h3#onceupon6 {
+  opacity: 0;
+  position: absolute;
+  top: 5.5%;
+  left: 14%;
+/*  left: 50%;
+  width: 50%;*/
+
 #scene2 #forestscene2{
   width: 175%;
   left: -25%;
@@ -296,6 +303,13 @@ header {
   width: 50%;*/
   -webkit-transform: translateY(-50%);
 }
+#scene3 #onceupon8{
+  opacity: 0;
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  -webkit-transform: translateY(-30%);
+}
 #scene3 #forest_left{
   width: 250%;
   top: 10%;
@@ -359,6 +373,8 @@ header {
 
 
 
+
+
 #scene4 {
   height: 100%;
   overflow: hidden;
@@ -379,6 +395,14 @@ header {
 /*  left: 50%;
   width: 50%;*/
   -webkit-transform: translateY(-50%);
+}
+#scene4 #onceupon10 {
+  opacity: 0;
+  position: absolute;
+  top: 60%;
+  left: 70%;
+  width: 40%;
+  -webkit-transform: translateY(-60%);
 }
 #scene4 #forest_back{
   opacity: 0;
@@ -427,6 +451,86 @@ header {
   top: 12%;
   left: 85%;
 }
+
+
+
+
+
+
+
+#wipe, #scene5, #scene6, #scene7, #scene8 {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  background: #A7AF80;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+}
+#wipe h3 {
+  position: relative;
+  left: -15%;
+  width: 70%;
+  top: 30%;
+  text-align: left;
+  -webkit-transform: translateY(-30%);
+  -webkit-transform: translateX(-130%);
+      -ms-transform: translateX(-130%);
+          transform: translateX(-130%);
+}
+#wipe img{
+  opacity: 0;
+  position: absolute;
+  margin: 0 auto;
+  text-align: center;
+}
+#wipe #oven-outline{
+  width: 70%;
+  top: 5%;
+  left: 40%;
+/*  z-index: 1;*/
+}
+#wipe #broom{
+  width: 20%;
+  top: 50%;
+  left: 42%;
+    -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+#wipe #fire1{
+  width: 25%;
+  left: 67.5%;
+  top: 42.5%;
+  z-index: 1;
+
+}
+#wipe #redbg{
+  width: 30%;
+  left: 65%;
+  top: 33% ;
+/*  z-index: -20;*/
+
+}
+#wipe #legs{
+  width: 20%;
+  top: 42%;
+  left: 70%;
+
+}
+#wipe #empty-cage{
+  width: 30%;
+  top: 55%;
+  left: 0;
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
 /*
 #second-wipe {
   height: 100%;
