--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -458,7 +458,7 @@ header {
 
 
 
-#wipe, #scene5, #scene6, #scene7, #scene8 {
+#wipe, #scene5, #scene6, #scene7{
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -531,6 +531,131 @@ header {
           transform: translateX(-100%);
 }
 
+
+#scene7 h3 {
+  opacity: 0;
+  position: absolute;
+  top: 60%;
+  width: 50%;
+  left: 75%;
+  -webkit-transform: translateY(-60%);
+}
+#scene7 #running_trees {
+  opacity: 0;
+  position: absolute;
+  width: 130%;
+  top:0;
+  left:-50%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+#scene7 #running_trees1 {
+  opacity: 0;
+  position: absolute;
+  width: 170%;
+  top: 5%;
+  left:-160%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+#scene7 #running_house {
+  opacity: 0;
+  position: absolute;
+  width: 60%;
+  top: 0%;
+  left: 70%;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+}
+#scene7 #running_gretel {
+  width: 17%;
+  left: 25%;
+  top: 50%;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translateX(90%);
+  -ms-transform: translateX(90%);
+  transform: translateX(90%);
+}
+#scene7 #running_hansel {
+  width: 15%;
+  left: 45%;
+  top: 50%;
+  position: absolute;
+  opacity: 0;
+  -webkit-transform: translateX(90%);
+  -ms-transform: translateX(90%);
+  transform: translateX(90%);
+}
+
+
+
+#scene8 {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  background: #A7AF80;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+}
+#scene8 h3{
+  opacity: 1;
+  position: absolute;
+  top: 85%;
+  -webkit-transform: translateY(-85%);
+}
+#scene8 h2{
+  font-size: 3em;
+  opacity: 0;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+}
+#scene8 #endtree1{
+  opacity: 1;
+  position: absolute;
+  width: 250%;
+  top:0;
+  left:-50%;
+}
+#scene8 #endtree2{
+  opacity: 1;
+  position: absolute;
+  width: 200%;
+  top:12.5%;
+  left:-80%;
+}
+#scene8 #endtree3{
+  opacity: 1;
+  position: absolute;
+  width: 180%;
+  top:20%;
+  left:-40%;
+}
+#scene8 #endtree4{
+  opacity: 1;
+  position: absolute;
+  width: 150%;
+  top:20%;
+  left:-25%;
+}
+#scene8 #hug{
+  opacity: 0;
+  position: absolute;
+  width: 50%;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+}
 /*
 #second-wipe {
   height: 100%;
