--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -494,6 +494,145 @@ header {
 }
 
 
+#scene6 h3 {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+/*  left: 50%;
+  width: 50%;*/
+  -webkit-transform: translateY(-50%);
+}
+
+
+#scene6 #onceupon13{
+
+  
+  opacity: 0;
+  position: absolute;
+  top: 35%;
+  left: 25%;
+  width: 55%;
+  text-align: center;
+  /*width: 90%;*/
+  -webkit-transform: translateY(-60%);
+
+}
+
+#scene6 #onceupon14{
+
+  
+  opacity: 0;
+  position: absolute;
+  top: 35%;
+  left: 25%;
+  width: 50%;
+  text-align: center;
+  /*width: 90%;*/
+  -webkit-transform: translateY(-60%);
+
+}
+
+#scene6 #pie{
+  position: absolute;
+  opacity: 0;
+  width: 60%;
+  top: 49%;
+  left: 20%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+
+
+}
+
+#scene6 #table{
+  position: absolute;
+  opacity: 0;
+  top: 80%;
+  width: 300%;
+  left: -20%;
+}
+
+#scene6 #oven-outline0{
+  position: absolute;
+  opacity: 0;
+  width: 34%;
+  top: -3%;
+  left: 77%;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+
+}
+
+#scene6 #broom0{
+  position: absolute;
+  opacity: 0;
+  width: 9%;
+  left: 78%;
+  top:20%;
+}
+
+#scene6 #redbg0{
+  position: absolute;
+  opacity: 0;
+  width: 13%;
+  left: 90%;
+  top:15%;
+}
+
+#scene6 #fire0{
+  position: absolute;
+  opacity: 0;
+  width: 13%;
+  left: 90%;
+  top: 17%;
+  height: 18%;
+
+}
+
+#scene6 #fire0-1{
+  position: absolute;
+  opacity: 0;
+  width: 13%;
+  left: 90%;
+  top: 14%;
+  height: 20%;
+
+}
+
+
+#scene6 #broom0{
+  position: absolute;
+  opacity: 0;
+}
+
+
+#scene6 #caged-hansel{
+  position: absolute;
+  opacity: 0;
+  top: 25%;
+  width: 20%;
+  left: -10%;
+
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+
+}
+
+#scene6 #gretel-crying{
+  position: absolute;
+  opacity: 0;
+  top: 25%;
+  width: 20%;
+  
+
+
+}
+
+
+
 
 
 #wipe, #scene5, #scene6, #scene7, #scene8 {
